<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:background="@drawable/shape_border_grey">

    <TextView
        android:id="@+id/userName_tv"
        style="@style/BigTextView"
        android:layout_width="0dp"
        android:layout_gravity="top"
        android:layout_margin="@dimen/margin_large"
        android:layout_weight="4"
        tools:text="@string/design_string_user" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_tv"
            style="@style/SmallTextView"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_very_small"
            android:text="@string/time"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/userTime_tv"
            style="@style/SmallTextView"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_very_small"
            tools:text="@string/design_string_time" />

        <ImageButton
            android:id="@+id/expand_ib"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center"
            android:background="@drawable/ic_expand"
            android:contentDescription="@string/expand"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/solved_tv"
            style="@style/NumberBoxTextView"
            android:background="@color/lightGreen"
            tools:text="@string/design_string_zero" />

        <TextView
            android:id="@+id/submitted_tv"
            style="@style/NumberBoxTextView"
            android:background="@color/darkGrey"
            tools:text="@string/design_string_twenty_for" />

        <TextView
            android:id="@+id/failed_tv"
            style="@style/NumberBoxTextView"
            android:background="@color/lightRed"
            tools:text="@string/design_string_zero" />

        <TextView
            android:id="@+id/notTried_tv"
            style="@style/NumberBoxTextView"
            android:background="@color/white"
            tools:text="@string/design_string_twenty_for" />

    </LinearLayout>

</LinearLayout>
